--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,12 +8,14 @@ version = "0.1.0"
 description = "A simple Hexapawn engine and experiments."
 readme = "README.md"
 license = { text = "Apache-2.0" }
-requires-python = ">=3.8"
+requires-python = ">=3.12.5"
 
 dependencies = [
     "PyYAML>=6.0",
     "tqdm==4.67.1",
     "pandas>=1.3.0",
+    "ipykernel>=6.29.5",
+    "matplotlib>=3.7.5",
 ]
 
 [project.scripts]
@@ -23,6 +25,10 @@ hexapawn = "hexapawn.cli:main"
 dev = [
     "build>=1.0",
     "pytest>=7.0",
+]
+notebooks = [
+    "jupyter>=1.0",
+    "matplotlib>=3.5",
 ]
 
 [tool.hatch.build.targets.wheel]
